// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex component sanity matches default snapshot 1`] = `
.c0 {
  text-align: left;
}

.c0 {
  box-sizing: border-box;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  
</div>
`;

exports[`Flex component sanity matches themed snapshot 1`] = `
.c1 {
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    
  </div>
</div>
`;
